# jp-legal-tech

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  render.yaml  start.sh
.context/: progress.md
.github/workflows/: _docker-build.yaml  deploy-staging.yaml
backend/: config.py  database.py  main.py  models.py  oidc_client.py
backend/api/: agent.py  auth.py  cases.py  collection.py  judges.py  regulation.py  search.py  strategy.py  venue.py
backend/collector/: fetcher.py  parser.py  pipeline.py
backend/services/: fact_viz_service.py  judge_service.py  llm_service.py  outcome_parser.py  regulation_llm_service.py  regulation_seed.py  regulation_service.py  search_service.py  stats_service.py  strategy_service.py  venue_llm_service.py  venue_service.py
backend/tests/: test_fact_viz.py
backend/utils/: era_date.py
data/: machu-picchu.db
docs/: design-system.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/regulation/: layout.tsx  page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/strategy/: page.tsx
frontend/src/app/venue/: page.tsx
frontend/src/components/: ConditionalShell.tsx  Skeleton.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  i18n.tsx
ops/: Dockerfile
scripts/: entrypoint.sh  import_japanese_cases.py  monitor_and_collect.py  parse_test.py  run_parse.py  seed.py  test_dashboard.py  upload_to_file_search.py
(+29 files in other folders)
